--- a/designer-furniture/frontend/index.html
+++ b/designer-furniture/frontend/index.html
@@ -1,8 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://st4.depositphotos.com/16030310/25209/v/450/depositphotos_252091768-stock-illustration-vector-illustration-blue-letters.jpg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://st4.depositphotos.com/16030310/25209/v/450/depositphotos_252091768-stock-illustration-vector-illustration-blue-letters.jpg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EliteFurnish</title>
   </head>
